--- a/old_structure/client-app-routed-element/module.json5
+++ b/old_structure/client-app-routed-element/module.json5
@@ -15,8 +15,8 @@
         {
           "op":"resolve-ejs"
         },
-      ],
-      "<%=vars.newElementInfo.destination.file%>":[
+      ],vars.newElementInfo.destinationFile
+      "<%=%>":[
         {
           "op": "insert",
           "position": "before",
