WIP vast improvements

--- a/modules/client-app-frame/module.json5
+++ b/modules/client-app-frame/module.json5
@@ -13,7 +13,7 @@
           {
              "op":"set",
              "key":"dependencies.routify",
-             "value":"^1.2.x"
+             "value":"^2.x.x"
           },
           {
              "op":"set",
