--- a/modules/server-db/module.json5
+++ b/modules/server-db/module.json5
@@ -48,17 +48,12 @@
          "server/app.js":[
             {
                "op":"insert",
-               "position":"before",
-               "newlineBefore":true,
-               "newlineAfter": false,
+               "insertBelow": true,
                "anchorPoint":".....= require(...)***...//...process.on.....",
                "value":"const makeDbConnection = require('./lib/makeDbConnection.js')\n"
             },
             {
                "op":"insert",
-               "position":"before",
-               "newlineBefore":false,
-               "newlineAfter":true,
                "anchorPoint":".....***//...app.use(express.static(root)).....",
                "value":"// Make the DB connection\nvars.connection = makeDbConnection(vars.config.db)\n"
             }
