--- a/modules/server-stores/module.json5
+++ b/modules/server-stores/module.json5
@@ -27,15 +27,13 @@
          "server/app.js":[
             {
                "op":"insert",
-               "newlineBefore":true,
-               "newlineAfter": false,
+               "insertBelow": true,
                "anchorPoint":".....= require(...)***...//...process.on.....",
                "value":"const JsonRestStores = require('jsonreststores')\n"
             },
             {
                "op":"insert",
-               "newlineBefore":true,
-               "newlineAfter":true,
+               "insertBelow": true,
                "anchorPoint":".....app.use(express.static(root))***.....",
                "value":"// Automatically include all stores in stores/<%-vars.defaultStoreVersion%> and listen to them all\nJsonRestStores.requireStoresFromPath(path.join(__dirname, 'stores/<%-vars.defaultStoreVersion%>'), app)\n"
             }
