--- a/modules/client-app-element/module.json5
+++ b/modules/client-app-element/module.json5
@@ -22,32 +22,24 @@
          {
           "if":"<%=vars.newElementInfo.typeOfElement === 'page' && userInput['client-app-element'].tailEnd%>",
           "op":"insert",
-          "newlineBefore":false,
-          "newlineAfter":true,
           "anchorPoint":".....<div ...tailend...>...***</div>.....",
           "value":"<<%=vars.newElementInfo.nameWithPrefix%> class=\"page\" ></<%=vars.newElementInfo.nameWithPrefix%>>"
         },
-                {
+        {
           "if":"<%=vars.newElementInfo.typeOfElement === 'page' && !userInput['client-app-element'].tailEnd%>",
           "op":"insert",
-          "newlineBefore":true,
-          "newlineAfter":true,
           "anchorPoint":".....<div ...main-pages...>...***</div>.....",
           "value":"<<%=vars.newElementInfo.nameWithPrefix%> class=\"page\" ></<%=vars.newElementInfo.nameWithPrefix%>>"
         },
         {
           "if":"<%=vars.newElementInfo.typeOfElement === 'page'%>",
           "op":"insert",
-          "newlineBefore":false,
-          "newlineAfter":true,
           "anchorPoint":".....***export class.....",
-          "value":"<%=vars.newElementInfo.uncommentedStaticImport ? '' : '// '%>import './pages/<%=vars.newElementInfo.nameWithPrefix%>.js'\n"
+          "value":"<%=vars.newElementInfo.uncommentedStaticImport ? '' : '// '%>import './pages/<%=vars.newElementInfo.nameWithPrefix%>.js'"
         },
         {
           "if":"<%=vars.newElementInfo.typeOfElement === 'page' && vars.newElementInfo.inDrawer%>",
           "op":"insert",
-          "newlineBefore": false,
-          "newlineAfter": true,
           "anchorPoint":".....render ()...<ee-drawer...>...***</ee-drawer>.....",
           "valueFromFile":"drawerEntry.js"
         }
@@ -59,77 +51,35 @@
         // Add the `import` statement for every non-page element (general-element, tab-element and page-specific)), 
         // if newElementInfo.insertElement is true 
         {
-          "if": "<%=vars.newElementInfo.typeOfElement !== 'page' && vars.newElementInfo.willNeedToInsertElement %>",
-          "op": "insert",
-          "newlineAfter": true,
+          "if":"<%=vars.newElementInfo.typeOfElement !== 'page' && vars.newElementInfo.willNeedToInsertElement %>",
+          "op":"insert",
           "anchorPoint":".....***class .....",
           "value": "import '<%=vars.newElementInfo.importPath%>'"
         },
-        // General element and page-specific
+        // General elements and page-specific elements
         {
-          "if": "<%=['general-element', 'page-specific'].indexOf(vars.newElementInfo.typeOfElement) !== -1 && vars.newElementInfo.insertElement %>",
-          "op": "insert",
-          "newlineAfter": true,
+          "if":"<%=['general-element', 'page-specific'].indexOf(vars.newElementInfo.typeOfElement) !== -1 && vars.newElementInfo.willNeedToInsertElement %>",
+          "op":"insert",
           "anchorPoint": ".....<contents>...***</contents>.....",
           "value":"<<%=vars.newElementInfo.nameWithPrefix%>></<%=vars.newElementInfo.nameWithPrefix%>>"
         },
-        // Tab element
+        // Tab elements
         {
-          "if": "<%=vars.newElementInfo.willNeedToInsertElement %>",
-          "op": "insert",
-          "newlineAfter": true,
+          "if":"<%=vars.newElementInfo.typeOfElement === 'tab-element' && vars.newElementInfo.willNeedToInsertElement %>",
+          "op":"insert",
           "anchorPoint": ".....<ee-tabs .....***</ee-tabs>.....",
           "valueFromFile":"tab.js"
         },
         {
-          "if": "<%=vars.newElementInfo.willNeedToInsertElement %>",
-          "op": "insert",
-          "newlineAfter": true,
+          "if":"<%=vars.newElementInfo.typeOfElement === 'tab-element' && vars.newElementInfo.willNeedToInsertElement %>",
+          "op":"insert",
           "anchorPoint": ".....<ee-tabs.....</a>...***<div.....",
           "value":"<a href=\"#<%=vars.newElementInfo.nameWithPrefix%>\" tab-name=\"<%=vars.newElementInfo.nameWithPrefix%>\"><div><%=vars.newElementInfo.nameNoPrefix%></div></a>"
         },
         {
           "op":"resolve-ejs"
         },
- 
-
       ]
     }
   }
 }
-
-
-
- // Page (NON-root). Add element to the page, as well as (maybe) the import and (maybe) in the drawer
-//        {
-//          "if":"<%=vars.newElementInfo.type === 'page'%>",
-//          "op": "insert",
-//          "position": "before",
-//          "newlineAfter": true,
-//          "newlineBefore": false,
-//          "anchorPoint": "<!-- Page tab insertion point -->",
-//          "value":"<<%=vars.newElementInfo.nameWithPrefix%> routing-group=\"<%=vars.newElementInfo.destination.pagePath%>\" slot=\"content\"></<%=vars.newElementInfo.nameWithPrefix%>>"
-//        },
-//        {
-//          "if":"<%=vars.newElementInfo.type === 'page'%>",
-//          "op": "insert",
-//          "position": "before",
-//          "newlineAfter": false,
-//          "anchorPoint": "/* Loaded modules -- end */",
-//          "value": "import '<%=vars.newElementInfo.importPath%>'"
-//        },
-//        {
-//          "if":"<%=vars.newElementInfo.type === 'page'%>",
-//          "op": "insert",
-//          "position": "before",
-//          "newlineAfter": true,
-//          "newlineBefore": false,
-//          "anchorPoint": '<!-- Page tab heading insertion point -->',
-//          "value":"<a name=\"<%=vars.newElementInfo.nameNoPrefix%>\" href=\"<%=vars.newElementInfo.destination.pagePath%><%=vars.newElementInfo.subPath%>\"><div><%=scaffoldizerUtils.capitalize(vars.newElementInfo.nameNoPrefix)%></div></a>"
-//        },
-//        {
-//          "if":"<%=vars.newElementInfo.type === 'page'%>",
-//          "op":"custom",
-//          "function":"maybeAddStarToPath"
-//        }
-//        */
